--- a/app/(dashboard)/(settings)/settings/invoice/invoice.module.css
+++ b/app/(dashboard)/(settings)/settings/invoice/invoice.module.css
@@ -81,19 +81,20 @@
 
 /* Compact numeric inputs */
 .compactNumberInput {
-  width: 100px;
+  width: 75px;
   text-align: right;
   padding-right: 0.75rem;
 }
 
 /* Slightly smaller for percentages */
 .compactPercentInput {
-  width: 90px;
+  width: 75px;
   text-align: right;
   padding-right: 0.75rem;
 }
 
 .statusToggle {
+  width: fit-content;
   cursor: pointer;
   padding: 0.5rem 1rem;
   border-radius: 8px;
