updated invoicemodal such that the indirect materials are added to the total

--- a/components/Invoices/InvoiceModal/InvoiceModal.module.css
+++ b/components/Invoices/InvoiceModal/InvoiceModal.module.css
@@ -885,3 +885,9 @@
 .internalNotes {
   background-color: #ffeaea;
 }
+
+.totalDivider {
+  height: 1px;
+  background: #e5e7eb; /* gray-200 */
+  margin: 10px 0;
+}
