--- a/app/(dashboard)/(settings)/settings/settings.module.css
+++ b/app/(dashboard)/(settings)/settings/settings.module.css
@@ -362,6 +362,7 @@
   border: none;
   background: #111827;
   color: #ffffff;
+  width: 100px;
   font-weight: 800;
   font-size: 14px;
   cursor: pointer;
